--- a/taverna/templates/homepage.html
+++ b/taverna/templates/homepage.html
@@ -14,6 +14,7 @@
   <link rel="icon" href="{{ url_for('static', filename='favicon.png') }}" type="image/png">
 
   <script defer src="{{ url_for('static', filename='js/carousel.js') }}"></script>
+  <script defer src="{{ url_for('static', filename='js/feed.js') }}"></script>
 
 
 </head>
