Add audio support for uploads and project view

--- a/taverna/templates/partials/attachments.html
+++ b/taverna/templates/partials/attachments.html
@@ -7,7 +7,9 @@
     'ppt': 'lontra-croft.png',
     'pptx': 'lontra-croft.png',
     'csv': 'lontra-csv.png',
-    'xlsx': 'lontra-xlsx.png'
+    'xlsx': 'lontra-xlsx.png',
+    'mp3': 'lontra-croft.png',
+    'wav': 'lontra-croft.png'
   } %}
   <ul class="divide-y">
     {% for a in attachments %}
